# booklog-to-obsidian

./: CLAUDE.md  LICENSE  README.md  config.yaml.example  main.py  pyproject.toml
.github/workflows/: test.yml
src/booklog_sync/: __main__.py  config.py  core.py  main.py  watcher.py
tests/: conftest.py  test_config.py  test_core.py  test_e2e.py  test_main.py  test_watcher.py
